<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.activities.AdditionalMenuActivity"
    android:background="@color/background"
    android:backgroundTint="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logoEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startFirstButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.308"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endFirstButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4124"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startSecondButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4204"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endSecondButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5248"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startThirdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5328"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endThirdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6372"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.888"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.989"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backButtonWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@drawable/logo"
        app:layout_constraintStart_toStartOf="@id/leftShift"
        app:layout_constraintEnd_toStartOf="@id/rightShift"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logoEnd"
        />

    <Button
        android:id="@+id/truco"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/truco"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/button"
        app:backgroundTint="@color/buttons"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/endFirstButton"
        app:layout_constraintEnd_toStartOf="@id/rightShift"
        app:layout_constraintStart_toEndOf="@id/leftShift"
        app:layout_constraintTop_toBottomOf="@id/startFirstButton" />

    <Button
        android:id="@+id/escoba"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/escoba"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/button"
        app:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toTopOf="@id/endSecondButton"
        app:layout_constraintEnd_toStartOf="@id/rightShift"
        app:layout_constraintStart_toEndOf="@id/leftShift"
        app:layout_constraintTop_toBottomOf="@id/startSecondButton" />

    <Button
        android:id="@+id/libre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/free"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/button"
        app:backgroundTint="@color/buttons"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/startThirdButton"
        app:layout_constraintStart_toEndOf="@id/leftShift"
        app:layout_constraintEnd_toStartOf="@id/rightShift"
        app:layout_constraintBottom_toTopOf="@id/endThirdButton"
        />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button"
        android:contentDescription="@string/back"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/flecha"
        app:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toTopOf="@id/endBackButton"
        app:layout_constraintEnd_toStartOf="@id/backButtonWidth"
        app:layout_constraintStart_toEndOf="@id/leftShift"
        app:layout_constraintTop_toBottomOf="@id/startBackButton" />

</androidx.constraintlayout.widget.ConstraintLayout>